--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -14,8 +14,8 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        otp: ["25.1"]
-        elixir: ["1.14.2"]
+        elixir: ["1.14.3"]
+        otp: ["23.3", "24.3.4", "25.2.3"]
     steps:
       - uses: actions/checkout@v3
       - name: Set up Elixir
