--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -14,8 +14,11 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        elixir: ["1.14.3"]
-        otp: ["23.3", "24.3.4", "25.2.3"]
+        elixir: ["1.14.3", "1.15.0"]
+        otp: ["24.3.4", "25.2.3"]
+        include:
+          - elixir: "1.14.3"
+            otp: "23.3"
     steps:
       - uses: actions/checkout@v3
       - name: Set up Elixir
@@ -30,7 +33,7 @@ jobs:
           key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
           restore-keys: ${{ runner.os }}-mix-
       - name: Install dependencies
-        run: mix deps.get
+        run: mix deps.get --check-locked
       - name: Compile
         run: mix compile --warnings-as-errors
       - name: Credo check
