--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -2,10 +2,10 @@ name: Elixir CI
 
 on:
   push:
-    branches: 
+    branches:
       - master
   pull_request:
-    branches: 
+    branches:
       - master
 
 jobs:
@@ -14,11 +14,11 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        elixir: ["1.14.3", "1.15.0"]
-        otp: ["24.3.4", "25.2.3"]
+        elixir: ["1.14.5", "1.15.0", "1.16.0"]
+        otp: ["24.3.4", "25.3.2", "26.2.1"]
         include:
           - elixir: "1.14.3"
-            otp: "23.3"
+            otp: "23.3.4"
     steps:
       - uses: actions/checkout@v4
       - name: Set up Elixir
