--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -14,11 +14,11 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        elixir: ["1.14.5", "1.15.0", "1.16.0"]
-        otp: ["24.3.4", "25.3.2", "26.2.1"]
+        elixir: ["1.15.0", "1.16.0"]
+        otp: ["25.3.2", "26.2.5"]
         include:
-          - elixir: "1.14.5"
-            otp: "23.3.4"
+          - elixir: "1.17.0"
+            otp: "27.0"
     steps:
       - uses: actions/checkout@v4
       - name: Set up Elixir
