--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -14,10 +14,10 @@ jobs:
     runs-on: ubuntu-24.04
     strategy:
       matrix:
-        elixir: ["1.16.0", "1.17.3"]
+        elixir: ["1.16.0", "1.17.3", "1.18.4"]
         otp: ["25.3.2", "26.2.5"]
         include:
-          - elixir: "1.18.3"
+          - elixir: "1.18.4"
             otp: "27.3.4"
     steps:
       - uses: actions/checkout@v4
